--- a/ConsulTest.Library/ConsulTest.Library.csproj
+++ b/ConsulTest.Library/ConsulTest.Library.csproj
@@ -1,12 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ConsulTest.Library\ConsulTest.Library.csproj" />
+    <PackageReference Include="Consul" Version="0.7.2.3" />
   </ItemGroup>
 
 </Project>
