--- a/ConsulTest.Configuration/ConsulTest.Configuration.csproj
+++ b/ConsulTest.Configuration/ConsulTest.Configuration.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.0.0" />
+    <PackageReference Include="Serilog" Version="2.6.0" />
   </ItemGroup>
 
 </Project>
