Added tests to consul configuration provider

--- a/ConsulTest.Tests/ConsulTest.Tests.csproj
+++ b/ConsulTest.Tests/ConsulTest.Tests.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ConsulTest.Configuration\ConsulTest.Configuration.csproj" />
     <ProjectReference Include="..\ConsulTest.Library\ConsulTest.Library.csproj" />
   </ItemGroup>
 
